--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,15 +19,38 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: abcb090125@gmail.com
-    password: kim753107-   # Gmail 앱 비밀번호
+    password: xvgvhswnzongbaiw
     properties:
       mail:
         smtp:
           auth: true
           starttls:
             enable: true
+          ssl:
+            trust: smtp.gmail.com
+  mvc:
+    path match:
+       matching-strategy: ANT_PATH_MATCHER
+
+  http:
+    converters:
+      preferred-json-mapper: jackson
+
+server:
+  port: 8080
+  servlet:
+    context-path: /
 
 jwt:
   secret: "0123456789ABCDEF0123456789ABCDEF" # 32비트
   token-validity-in-seconds: 1209600 # 14일
 
+logging:
+  level:
+    org.springframework: INFO
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+  mvc:
+    pathmatch:
+      matching-strategy: ANT_PATH_MATCHER
