--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,51 +1,102 @@
-server:
-  port: 8080
-
+#server:
+#  port: 8080
+#
+#spring:
+#  profiles:
+#    active: prod
+#  datasource:
+#    hikari:
+#      max-lifetime: 170000 # 170초
+#    url: root
+#    username: root
+#    password: Qwer1234!
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#
+#  security:
+#    user:
+#      name: ${secrets.SECURITY_USER_NAME}
+#      password: ${secrets.SECURITY_USER_PASSWORD}
+#
+#  jpa:
+#    database: mysql
+#    database-platform: org.hibernate.dialect.MySQL8Dialect
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.MySQL8Dialect
+#        format_sql: true
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+#
+#application:
+#  jwt:
+#    secretKey: ${secrets.JWT_SECRET_KEY}
+#    expiration: 172800000    # 48시간
+#    refreshExpiration: 604800000   # 7일
+#
+#springdoc:
+#  api-docs:
+#    enabled: true
+#    version: openapi_3_0
+#    path: /v3/api-docs
+#  default-consumes-media-type: application/json
+#  auto-tag-classes: true
+#  swagger-ui:
+#    operationsSorter: method
+#    path: /swagger-ui.html
+#
 spring:
-  profiles:
-    active: prod
-  datasource:
-    hikari:
-      max-lifetime: 170000 # 170초
-    url: root
-    username: root
-    password: Qwer1234!
-    driver-class-name: com.mysql.cj.jdbc.Driver
+  application:
+    name: oneclass
 
-  security:
-    user:
-      name: ${secrets.SECURITY_USER_NAME}
-      password: ${secrets.SECURITY_USER_PASSWORD}
+  datasource:
+    url: jdbc:postgresql://localhost:5432/oneclass
+    username: root
+    password:
 
   jpa:
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQL8Dialect
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
-        format_sql: true
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
-application:
-  jwt:
-    secretKey: ${secrets.JWT_SECRET_KEY}
-    expiration: 172800000    # 48시간
-    refreshExpiration: 604800000   # 7일
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: abcb090125@gmail.com
+    password: xvgvhswnzongbaiw
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+          ssl:
+            trust: smtp.gmail.com
+  mvc:
+    path match:
+      matching-strategy: ANT_PATH_MATCHER
 
-springdoc:
-  api-docs:
-    enabled: true
-    version: openapi_3_0
-    path: /v3/api-docs
-  default-consumes-media-type: application/json
-  auto-tag-classes: true
-  swagger-ui:
-    operationsSorter: method
-    path: /swagger-ui.html
+  http:
+    converters:
+      preferred-json-mapper: jackson
 
-#logging:
-#  discord:
-#    webhook-url: ${secrets.DISCORD_WEBHOOK_URL}
-#  config: classpath:logback.xml
+server:
+  port: 8080
+  servlet:
+    context-path: /
+
+jwt:
+  secret: "0123456789ABCDEF0123456789ABCDEF" # 32비트
+  token-validity-in-seconds: 3600 # 1시간
+
+logging:
+  level:
+    org.springframework: INFO
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+toss:
+  secret-key: test_sk_xxxxxxxxxxxxxxxxx
