feat: lesson에서 lesson에 할당된 모든 학생에게  과제 보내는 기능 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
 
   datasource:
     url: jdbc:postgresql://localhost:5432/oneclass
-    username: root
-    password:
-
+    username: gnlandkmg
+    password: Qwer1234!
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: update
