--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,15 +5,18 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/oneclass
     username: root
-    password:
+    password:               # 실제 운영: 환경 변수로
+    driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: update       # 운영: validate / none + Flyway
+    open-in-view: false
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+        # dialect 명시 제거 (Hibernate 6 자동 선택)
 
   mail:
     host: smtp.gmail.com
@@ -24,17 +27,8 @@ spring:
       mail:
         smtp:
           auth: true
-          starttls:
-            enable: true
-          ssl:
-            trust: smtp.gmail.com
-  mvc:
-    pathmatch:
-       matching-strategy: ANT_PATH_MATCHER
-
-  http:
-    converters:
-      preferred-json-mapper: jackson
+          starttls.enable: true
+          ssl.trust: smtp.gmail.com
 
 server:
   port: 8080
@@ -42,14 +36,17 @@ server:
     context-path: /
 
 jwt:
-  secret: "0123456789ABCDEF0123456789ABCDEF" # 32비트
-  token-validity-in-seconds: 3600 # 1시간
+  secret: "0123456789ABCDEF0123456789ABCDEF"
+  token-validity-in-seconds: 3600
+  refresh-validity-in-seconds: 1209600   # 14일
 
 logging:
   level:
     org.springframework: INFO
     org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    org.hibernate.orm.jdbc.bind: TRACE    # (Hibernate 6 binding 로깅)
+    org.hibernate.type.descriptor.sql.BasicBinder: OFF   # 민감 정보 노출시키지 않으려면 OFF
+    org.springframework.security.config.annotation.authentication.configuration.UserDetailsServiceAutoConfiguration: ERROR
 
 toss:
   secret-key: test_sk_xxxxxxxxxxxxxxxxx
