--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,7 +36,7 @@ server:
     context-path: /
 
 jwt:
-  secret: "${JWT_SECRET}"  
+  secret: ${JWT_SECRET}  
   token-validity-in-seconds: 3600
   refresh-validity-in-seconds: 1209600   # 14일
 
