--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,7 +36,7 @@ server:
     context-path: /
 
 jwt:
-  secret: ${JWT_SECRET}
+  secret: 0123456789ABCDEF0123456789ABCDEF
   token-validity-in-seconds: 3600
   refresh-validity-in-seconds: 1209600   # 14일
 
