fix: resetPassword의 request 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: abcb090125@gmail.com
-    password: ${SPRING_MAIL_PASSWORD}
+    password: xvgv hswn zong baiw
     properties:
       mail:
         smtp:
