--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.google.zxing:core:3.5.0'
+    implementation 'com.google.zxing:javase:3.5.0'
+
+    // 이미 존재할 가능성이 높은 다른 의존성들
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -48,7 +52,6 @@ dependencies {
 
     implementation 'io.sendon:sendon-sdk-java:1.0.2'
     implementation 'io.github.cdimascio:java-dotenv:5.2.2'
-
 }
 
 tasks.named('test') {
