--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,32 +1,28 @@
 spring:
-  profiles:
-    active: prod
-
-
-  application:
-    name: oneclass
+  config:
+    activate:
+      on-profile: prod
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/oneclass
-    username: root
-    password:               # 실제 운영: 환경 변수로
+    url: jdbc:postgresql://${DB_HOST:localhost}:5432/oneclass
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
-      ddl-auto: update       # 운영: validate / none + Flyway
+      ddl-auto: validate     # 스키마 변경 금지
     open-in-view: false
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
-        format_sql: true
-        # dialect 명시 제거 (Hibernate 6 자동 선택)
+        format_sql: false
 
   mail:
     host: smtp.gmail.com
     port: 587
-    username: abcb090125@gmail.com
-    password: ${SPRING_EMAIL_PASSWORD}
+    username: ${MAIL_USER}
+    password: ${SPRING_MAIL_PASSWORD}
     properties:
       mail:
         smtp:
@@ -34,23 +30,13 @@ spring:
           starttls.enable: true
           ssl.trust: smtp.gmail.com
 
-server:
-  port: 8080
-  servlet:
-    context-path: /
-
 jwt:
   secret: ${JWT_SECRET}
-  token-validity-in-seconds: 3600
-  refresh-validity-in-seconds: 1209600   # 14일
 
 logging:
   level:
-    org.springframework: INFO
-    org.hibernate.SQL: DEBUG
-    org.hibernate.orm.jdbc.bind: TRACE    # (Hibernate 6 binding 로깅)
-    org.hibernate.type.descriptor.sql.BasicBinder: OFF   # 민감 정보 노출시키지 않으려면 OFF
-    org.springframework.security.config.annotation.authentication.configuration.UserDetailsServiceAutoConfiguration: ERROR
+    org.hibernate.SQL: WARN
+    org.springframework.security: WARN
 
-toss:
-  secret-key: test_sk_xxxxxxxxxxxxxxxxx
+#toss:
+#  secret-key: ${TOSS_SECRET_KEY}
