--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,14 +4,15 @@ spring:
       on-profile: prod
 
   datasource:
-    url: jdbc:postgresql://${DB_HOST:localhost}:5432/oneclass
-    username: ${DB_USER}
-    password: ${DB_PASSWORD}
+    # 운영 변수명도 dev와 동일 키로 맞추는 것을 권장합니다.
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
-      ddl-auto: validate     # 스키마 변경 금지
+      ddl-auto: validate
     open-in-view: false
     show-sql: false
     properties:
@@ -21,7 +22,7 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${MAIL_USER}
+    username: ${SPRING_MAIL_USERNAME}
     password: ${SPRING_MAIL_PASSWORD}
     properties:
       mail:
@@ -30,15 +31,11 @@ spring:
           starttls.enable: true
           ssl.trust: smtp.gmail.com
 
-jwt:
-  secret: ${JWT_SECRET}
-
 logging:
   level:
     org.hibernate.SQL: WARN
     org.springframework.security: WARN
 
-#toss:
-
-#  secret-key: ${TOSS_SECRET_KEY}
-
+jwt:
+  # 운영에서는 반드시 환경변수 제공(미제공 시 실패하도록 fallback 제거)
+  secret: ${JWT_SECRET}
