--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,7 +27,7 @@ phases:
       - ls -al build/libs/
       - scp -i ~/.ssh/key.pem build/libs/$JAR_NAME $EC2_USER@$EC2_HOST:~/
       - ssh -i ~/.ssh/key.pem $EC2_USER@$EC2_HOST "ls -al ~/"
-      - ssh -i ~/.ssh/key.pem $EC2_USER@$EC2_HOST "pgrep -fl java; pkill -f '$JAR_NAME' || pkill -f java || echo '[WARN] pkill failed with code $?'"
+      - ssh -i ~/.ssh/key.pem $EC2_USER@$EC2_HOST "pgrep -af java || echo 'No java process'; pkill -f $JAR_NAME || echo '[WARN] pkill failed with code $?'; true"
       - ssh -i ~/.ssh/key.pem $EC2_USER@$EC2_HOST "nohup java -jar ~/$JAR_NAME > ~/app.log 2>&1 &"
       - ssh -i ~/.ssh/key.pem $EC2_USER@$EC2_HOST "tail -n 10 ~/app.log"
       - echo "배포 완료"
