--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,8 +29,11 @@ phases:
       - ssh -o LogLevel=error -i ~/.ssh/key.pem $EC2_USER@$EC2_HOST "ls -al ~/"
       - ssh -o LogLevel=error -i ~/.ssh/key.pem $EC2_USER@$EC2_HOST "pgrep -af java || echo 'No java process'"
       - ssh -o LogLevel=error -i ~/.ssh/key.pem $EC2_USER@$EC2_HOST "pkill -9 -f 'java -jar ~/$JAR_NAME'" || true
+      # 환경변수를 인라인으로 전달하면서 JAR 실행 (아래 라인 하나에 모든 변수 포함)
       - ssh -o LogLevel=error -i ~/.ssh/key.pem $EC2_USER@$EC2_HOST "SPRING_DATASOURCE_URL='$SPRING_DATASOURCE_URL' SPRING_DATASOURCE_USERNAME='$SPRING_DATASOURCE_USERNAME' SPRING_DATASOURCE_PASSWORD='$SPRING_DATASOURCE_PASSWORD' SPRING_MAIL_USERNAME='$SPRING_MAIL_USERNAME' SPRING_MAIL_PASSWORD='$SPRING_MAIL_PASSWORD' JWT_SECRET='$JWT_SECRET' DB_HOST='$DB_HOST' DB_PORT='$DB_PORT' DB_NAME='$DB_NAME' DB_USER='$DB_USER' DB_PASSWORD='$DB_PASSWORD' SMS_MOBILE_FROM='$SMS_MOBILE_FROM' USER_ID='$USER_ID' USER_APIKEY='$USER_APIKEY' nohup java -jar ~/$JAR_NAME > ~/app.log 2>&1 &"
-      - ssh -o LogLevel=error -i ~/.ssh/key.pem $EC2_USER@$EC2_HOST "tail -n 10 ~/app.log"
+      # 디버깅용: 환경변수 실제 값 확인 (선택)
+      - ssh -o LogLevel=error -i ~/.ssh/key.pem $EC2_USER@$EC2_HOST "echo DEBUG VARS; echo \$SPRING_DATASOURCE_URL; echo \$SPRING_DATASOURCE_USERNAME; echo \$SPRING_DATASOURCE_PASSWORD"
+      - ssh -o LogLevel=error -i ~/.ssh/key.pem $EC2_USER@$EC2_HOST "tail -n 30 ~/app.log"
       - echo "배포 완료"
 
 artifacts:
