cd: deploy.yml(git actions)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,59 +35,60 @@ jobs:
       - name: Copy JAR to EC2
         run: scp -i key.pem build/libs/oneclass-0.0.1-SNAPSHOT.jar ubuntu@${{ secrets.EC2_HOST }}:~/
 
-      - name: Check if secrets are loaded
+      - name: Create deployment script
         run: |
-          echo "EC2_HOST length: ${#EC2_HOST}"
-          echo "EC2_HOST first 5 chars: ${EC2_HOST:0:5}"
-          echo "DB_PASSWORD length: ${#DB_PASSWORD}"
-        env:
-          EC2_HOST: ${{ secrets.EC2_HOST }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          cat > deploy.sh << 'SCRIPT_END'
+          #!/bin/bash
+          
+          echo "=== Starting deployment ==="
+          
+          # Stop existing Java process
+          echo "Stopping existing application..."
+          pkill -9 -f 'java -jar ~/oneclass-0.0.1-SNAPSHOT.jar' || true
+          sleep 2
+          
+          # Set all environment variables
+          export DB_HOST='${{ secrets.DB_HOST }}'
+          export DB_PORT='${{ secrets.DB_PORT }}'
+          export DB_NAME='${{ secrets.DB_NAME }}'
+          export DB_USER='${{ secrets.DB_USER }}'
+          export DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
+          export SPRING_DATASOURCE_URL='${{ secrets.SPRING_DATASOURCE_URL }}'
+          export SPRING_DATASOURCE_USERNAME='${{ secrets.SPRING_DATASOURCE_USERNAME }}'
+          export SPRING_DATASOURCE_PASSWORD='${{ secrets.SPRING_DATASOURCE_PASSWORD }}'
+          export SPRING_MAIL_USERNAME='${{ secrets.SPRING_MAIL_USERNAME }}'
+          export SPRING_MAIL_PASSWORD='${{ secrets.SPRING_MAIL_PASSWORD }}'
+          export JWT_SECRET='${{ secrets.JWT_SECRET }}'
+          export SMS_MOBILE_FROM='${{ secrets.SMS_MOBILE_FROM }}'
+          export USER_ID='${{ secrets.USER_ID }}'
+          export USER_APIKEY='${{ secrets.USER_APIKEY }}'
+          
+          # Start application in background
+          echo "Starting new application..."
+          nohup java -jar ~/oneclass-0.0.1-SNAPSHOT.jar > ~/app.log 2>&1 &
+          
+          echo "=== Deployment script completed ==="
+          SCRIPT_END
+          
+          chmod +x deploy.sh
 
-      - name: Create SSH key file
-        run: |
-          echo "${{ secrets.EC2_SSH_KEY }}" > key.pem
-          chmod 600 key.pem
+      - name: Copy deployment script to EC2
+        run: scp -i key.pem deploy.sh ubuntu@${{ secrets.EC2_HOST }}:~/
 
-      - name: Verify SSH key file
-        run: |
-          echo "key.pem file size: $(wc -c < key.pem) bytes"
-          echo "key.pem first line:"
-          head -n 1 key.pem
-          echo "key.pem last line:"
-          tail -n 1 key.pem    
+      - name: Execute deployment on EC2
+        run: ssh -i key.pem ubuntu@${{ secrets.EC2_HOST }} 'bash ~/deploy.sh'
 
-      - name: Deploy and run JAR on EC2
-        env:
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_PORT: ${{ secrets.DB_PORT }}
-          DB_NAME: ${{ secrets.DB_NAME }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          SPRING_DATASOURCE_URL: ${{ secrets.SPRING_DATASOURCE_URL }}
-          SPRING_DATASOURCE_USERNAME: ${{ secrets.SPRING_DATASOURCE_USERNAME }}
-          SPRING_DATASOURCE_PASSWORD: ${{ secrets.SPRING_DATASOURCE_PASSWORD }}
-          SPRING_MAIL_USERNAME: ${{ secrets.SPRING_MAIL_USERNAME }}
-          SPRING_MAIL_PASSWORD: ${{ secrets.SPRING_MAIL_PASSWORD }}
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          SMS_MOBILE_FROM: ${{ secrets.SMS_MOBILE_FROM }}
-          USER_ID: ${{ secrets.USER_ID }}
-          USER_APIKEY: ${{ secrets.USER_APIKEY }}
+      - name: Verify deployment
         run: |
-          ssh -i key.pem ubuntu@${{ secrets.EC2_HOST }} "
-            pkill -9 -f 'java -jar ~/oneclass-0.0.1-SNAPSHOT.jar' || true
-            DB_HOST='$DB_HOST' \
-            DB_PORT='$DB_PORT' \
-            DB_NAME='$DB_NAME' \
-            DB_USER='$DB_USER' \
-            DB_PASSWORD='$DB_PASSWORD' \
-            SPRING_DATASOURCE_URL='$SPRING_DATASOURCE_URL' \
-            SPRING_DATASOURCE_USERNAME='$SPRING_DATASOURCE_USERNAME' \
-            SPRING_DATASOURCE_PASSWORD='$SPRING_DATASOURCE_PASSWORD' \
-            SPRING_MAIL_USERNAME='$SPRING_MAIL_USERNAME' \
-            SPRING_MAIL_PASSWORD='$SPRING_MAIL_PASSWORD' \
-            JWT_SECRET='$JWT_SECRET' \
-            SMS_MOBILE_FROM='$SMS_MOBILE_FROM' \
-            USER_ID='$USER_ID' \
-            USER_APIKEY='$USER_APIKEY' \
-            nohup java -jar ~/oneclass-0.0.1-SNAPSHOT.jar > ~/app.log 2>&1 &"
+          echo "Waiting 5 seconds for application to start..."
+          sleep 5
+          ssh -i key.pem ubuntu@${{ secrets.EC2_HOST }} '
+            echo "=== Java Process Status ==="
+            ps aux | grep "[j]ava -jar ~/oneclass-0.0.1-SNAPSHOT.jar" || echo "⚠️ Warning: Java process not found"
+            echo ""
+            echo "=== Last 30 lines of application log ==="
+            tail -n 30 ~/app.log 2>/dev/null || echo "⚠️ Log file not created yet"
+          '
+
+      - name: Deployment completed
+        run: echo "✅ Deployment to EC2 completed successfully!"
