--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline (HTTPS)
 
 on:
   push:
@@ -35,6 +35,7 @@ jobs:
           SMS_MOBILE_FROM=${{ secrets.SMS_MOBILE_FROM }}
           USER_ID=${{ secrets.USER_ID }}
           USER_APIKEY=${{ secrets.USER_APIKEY }}
+          SSL_PASSWORD=${{ secrets.SSL_PASSWORD }}
           ENV_EOF
 
       - name: Build with Gradle
@@ -57,50 +58,54 @@ jobs:
       - name: Copy .env file to EC2
         run: scp -i key.pem .env ubuntu@${{ secrets.EC2_HOST }}:~/
 
-      - name: Create deployment script
+      - name: Create deployment script with HTTPS
         run: |
           cat > deploy.sh << 'SCRIPT_END'
           #!/bin/bash
 
           echo "=== Starting deployment ==="
 
-          # Stop ALL java processes (더 확실한 방법)
-          echo "Stopping existing application..."
+          # 1️⃣ Stop existing Java processes
           pkill -9 java || true
           sleep 3
-
-          # 혹시 남아있는 프로세스 확인 및 제거
           if pgrep -f "oneclass.*\.jar" > /dev/null; then
-            echo "Force killing remaining processes..."
             pkill -9 -f "oneclass.*\.jar"
             sleep 2
           fi
 
-          # 프로세스가 완전히 종료되었는지 확인
-          if pgrep java > /dev/null; then
-            echo "⚠️ Warning: Java process still running!"
-            ps aux | grep java
-          else
-            echo "✅ All Java processes stopped"
+          # 2️⃣ Issue/renew Let's Encrypt certificate
+          DOMAIN="onefit.xeneric.kr"
+          EMAIL="${{ secrets.LETSENCRYPT_EMAIL }}"
+          SSL_PASSWORD="${SSL_PASSWORD}"
+
+          # Install certbot if not exists
+          if ! command -v certbot > /dev/null; then
+            sudo apt-get update
+            sudo apt-get install -y certbot
           fi
 
-          # Start application in background
-          echo "Starting new application..."
-          cd /home/ubuntu
-          nohup java -jar /home/ubuntu/oneclass-0.0.1-SNAPSHOT.jar > /home/ubuntu/app.log 2>&1 &
+          # Renew certificate or issue if not exist
+          sudo certbot certonly --non-interactive --agree-tos --standalone -d $DOMAIN --email $EMAIL || true
 
-          sleep 2
+          # 3️⃣ Generate keystore.p12 for Spring Boot
+          sudo openssl pkcs12 -export \
+            -in /etc/letsencrypt/live/$DOMAIN/fullchain.pem \
+            -inkey /etc/letsencrypt/live/$DOMAIN/privkey.pem \
+            -out /home/ubuntu/keystore.p12 \
+            -name tomcat \
+            -password pass:$SSL_PASSWORD
 
-          # 새 프로세스 확인
+          # 4️⃣ Start Spring Boot on 443 with HTTPS
+          nohup sudo java -jar /home/ubuntu/oneclass-0.0.1-SNAPSHOT.jar > /home/ubuntu/app.log 2>&1 &
+
+          sleep 3
+
           if pgrep -f "oneclass.*\.jar" > /dev/null; then
-            echo "✅ Application started successfully"
-            ps aux | grep java | grep -v grep
+            echo "✅ Application started successfully on HTTPS"
           else
             echo "❌ Failed to start application"
             tail -n 20 /home/ubuntu/app.log
           fi
-
-          echo "=== Deployment script completed ==="
           SCRIPT_END
 
           chmod +x deploy.sh
@@ -113,20 +118,16 @@ jobs:
 
       - name: Verify deployment
         run: |
-          echo "Waiting 10 seconds for application to fully start..."
           sleep 10
           ssh -i key.pem ubuntu@${{ secrets.EC2_HOST }} '
-            echo "=== Java Process Status ==="
             if ps aux | grep "[j]ava -jar ~/oneclass-0.0.1-SNAPSHOT.jar" > /dev/null; then
-              echo "✅ Application is running!"
-              ps aux | grep "[j]ava -jar ~/oneclass-0.0.1-SNAPSHOT.jar"
+              echo "✅ Application is running on HTTPS!"
             else
-              echo "⚠️ Warning: Java process not found"
+              echo "⚠️ Java process not found"
             fi
-            echo ""
-            echo "=== Last 50 lines of application log ==="
-            tail -n 50 ~/app.log 2>/dev/null || echo "⚠️ Log file not found"
+            echo "=== Last 50 lines of app.log ==="
+            tail -n 50 ~/app.log || echo "⚠️ Log file not found"
           '
 
       - name: Deployment completed
-        run: echo "✅ Deployment to EC2 completed successfully!"
+        run: echo "✅ Deployment with HTTPS completed successfully!"
