--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,43 +62,48 @@ jobs:
         run: |
           cat > deploy.sh << 'SCRIPT_END'
           #!/bin/bash
+          set -e
 
           echo "=== Starting deployment ==="
 
-          # 1️⃣ Stop existing Java processes
-          pkill -9 java || true
-          sleep 3
-          if pgrep -f "oneclass.*\.jar" > /dev/null; then
-            pkill -9 -f "oneclass.*\.jar"
-            sleep 2
-          fi
-
-          # 2️⃣ Issue/renew Let's Encrypt certificate
           DOMAIN="onefit.xeneric.kr"
           EMAIL="${{ secrets.LETSENCRYPT_EMAIL }}"
           SSL_PASSWORD="${SSL_PASSWORD}"
+          JAR_PATH="/home/ubuntu/oneclass-0.0.1-SNAPSHOT.jar"
+          KEYSTORE_PATH="/home/ubuntu/keystore.p12"
 
-          # Install certbot if not exists
+          # 1️⃣ Stop existing Java processes
+          sudo pkill -9 java || true
+          sleep 3
+          if pgrep -f "oneclass.*\.jar" > /dev/null; then
+            sudo pkill -9 -f "oneclass.*\.jar"
+            sleep 2
+          fi
+
+          # 2️⃣ Install certbot if not exists
           if ! command -v certbot > /dev/null; then
             sudo apt-get update
             sudo apt-get install -y certbot
           fi
 
-          # Renew certificate or issue if not exist
+          # 3️⃣ Issue/renew Let's Encrypt certificate
           sudo certbot certonly --non-interactive --agree-tos --standalone -d $DOMAIN --email $EMAIL || true
 
-          # 3️⃣ Generate keystore.p12 for Spring Boot
+          # 4️⃣ Generate keystore.p12 for Spring Boot
           sudo openssl pkcs12 -export \
             -in /etc/letsencrypt/live/$DOMAIN/fullchain.pem \
             -inkey /etc/letsencrypt/live/$DOMAIN/privkey.pem \
-            -out /home/ubuntu/keystore.p12 \
+            -out $KEYSTORE_PATH \
             -name tomcat \
             -password pass:$SSL_PASSWORD
 
-          # 4️⃣ Start Spring Boot on 443 with HTTPS
-          nohup sudo java -jar /home/ubuntu/oneclass-0.0.1-SNAPSHOT.jar > /home/ubuntu/app.log 2>&1 &
+          sudo chown ubuntu:ubuntu $KEYSTORE_PATH
 
-          sleep 3
+          # 5️⃣ Start Spring Boot on 443
+          echo "=== Launching Spring Boot on 443 ==="
+          nohup sudo java -jar $JAR_PATH > /home/ubuntu/app.log 2>&1 &
+
+          sleep 5
 
           if pgrep -f "oneclass.*\.jar" > /dev/null; then
             echo "✅ Application started successfully on HTTPS"
