--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -107,7 +107,7 @@ jobs:
 
           # 5️⃣ Start Spring Boot on HTTPS port
           echo "=== Launching Spring Boot on port $EC2_PORT ==="
-          nohup sudo java -jar $JAR_PATH > /home/ubuntu/app.log 2>&1 &
+          nohup sudo java -jar -Dspring.profiles.active=prod $JAR_PATH > /home/ubuntu/app.log 2>&1 &
 
           sleep 5
 
