chore: log 덮어쓰기 X

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -108,7 +108,7 @@ jobs:
 
           # 5️⃣ Start Spring Boot on HTTPS port
           echo "=== Launching Spring Boot on port $EC2_PORT ==="
-          nohup sudo -E java -jar -Dspring.profiles.active=prod $JAR_PATH > /home/ubuntu/app.log 2>&1 &
+          nohup sudo -E java -jar -Dspring.profiles.active=prod $JAR_PATH >> /home/ubuntu/app.log 2>&1 &
 
           sleep 5
 
